# emolog

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/emolog/: cli.py
src/emolog/core/: analyzer.py  data_manager.py  emotion_logger.py
src/emolog/web/: __init__.py  server.py
src/emolog/web/static/css/: attic.css
src/emolog/web/static/js/: attic.js
src/emolog/web/templates/: dashboard.html
