[project]
name = "emolog"
version = "0.1.0"
description = "A terminal-based emotion logging tool for developers"
readme = "README.md"
authors = [
    { name = "gmlee", email = "sld9849@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0"
]

[project.scripts]
emo = "emolog.cli:main"
e = "emolog.cli:main"


[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
